@@ -7,7 +7,8 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
-
+import java.util.List;
+import java.util.stream.Collectors;
 
 
 public class   SecurityUser implements UserDetails {
@@ -34,11 +35,10 @@ public class   SecurityUser implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.stream(user
-                        .getRoles()
-                        .split(","))
+        List<GrantedAuthority> authorities = Arrays.stream(user.getRoles().split(","))
                 .map(SimpleGrantedAuthority::new)
-                .toList(); // list of roles
+                .collect(Collectors.toList()); // List of roles
+        return authorities;
     }
 
     @Override
